video carousel reviews added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>-->
+    <style>
+        .swiper-slide {
+            background-position: center;
+            background-size: cover;
+        }
+        .swiperSlideVideoReviews {
+            width: 500px;
+            height: 300px;
+        }
+    </style>
 </head>
 <body>
 <main>
@@ -262,11 +272,10 @@
                             <div class="for-whom">
                                 <div class="row">
                                     <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                        <div>
-                                            <div class="card cards-with-img w-25">
-                                                <img src="img/img-with-woman.svg" alt="a-girl"/>
-                                                <h5 class="text-center fw-bold">Детям</h5>
-                                            </div>
+                                        <div class="text-center">
+                                            <img class="img-fluid" src="img/for_children.png" alt="">
+                                            <img class="img-fluid" src="img/for_adults.png" alt="">
+                                            <img class="img-fluid" src="img/for_olds.png" alt="">
                                         </div>
                                         <div>
                                             <ul class="for-whom-ul">
@@ -315,9 +324,118 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
-                        ...
+                        <div class="swiper-slide">
+                            <div class="for-whom">
+                                <div class="row">
+                                    <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
+                                        <div class="text-center">
+                                            <img class="img-fluid" src="img/for_children.png" alt="">
+                                            <img class="img-fluid" src="img/for_adults.png" alt="">
+                                            <img class="img-fluid" src="img/for_olds.png" alt="">
+                                        </div>
+                                        <div>
+                                            <ul class="for-whom-ul">
+                                                <li class="for-whom-li">
+                                                    <p>
+                                                        <strong>Известная с древности пряность по праву считается не
+                                                            только</strong>
+                                                        <br>
+                                                        ароматическим, но и лекарственным растением. Черный тмин
+                                                        используют в медицине при заболеваниях кишечника, в
+                                                        косметологии, в ароматерапии. <br> Узнаем, какие еще полезные
+                                                        свойства есть у этого растения
+                                                    </p>
+                                                </li>
+                                                <li class="for-whom-li">
+                                                    <p>
+                                                        <strong>Известная с древности пряность по праву считается не
+                                                            только</strong>
+                                                        <br>
+                                                        ароматическим, но и лекарственным растением. Черный тмин
+                                                        используют в медицине при заболеваниях кишечника, в
+                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
+                                                        свойства есть у этого растения
+                                                    </p>
+                                                </li>
+                                                <li class="for-whom-li">
+                                                    <p>
+                                                        <strong>Известная с древности пряность по праву считается не
+                                                            только</strong>
+                                                        <br>
+                                                        ароматическим, но и лекарственным растением. Черный тмин
+                                                        используют в медицине при заболеваниях кишечника, в
+                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
+                                                        свойства есть у этого растения
+                                                    </p>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+                                        <div>
+                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
+                                                 alt=""/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="for-whom">
+                                <div class="row">
+                                    <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
+                                        <div class="text-center">
+                                            <img class="img-fluid" src="img/for_children.png" alt="">
+                                            <img class="img-fluid" src="img/for_adults.png" alt="">
+                                            <img class="img-fluid" src="img/for_olds.png" alt="">
+                                        </div>
+                                        <div>
+                                            <ul class="for-whom-ul">
+                                                <li class="for-whom-li">
+                                                    <p>
+                                                        <strong>Известная с древности пряность по праву считается не
+                                                            только</strong>
+                                                        <br>
+                                                        ароматическим, но и лекарственным растением. Черный тмин
+                                                        используют в медицине при заболеваниях кишечника, в
+                                                        косметологии, в ароматерапии. <br> Узнаем, какие еще полезные
+                                                        свойства есть у этого растения
+                                                    </p>
+                                                </li>
+                                                <li class="for-whom-li">
+                                                    <p>
+                                                        <strong>Известная с древности пряность по праву считается не
+                                                            только</strong>
+                                                        <br>
+                                                        ароматическим, но и лекарственным растением. Черный тмин
+                                                        используют в медицине при заболеваниях кишечника, в
+                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
+                                                        свойства есть у этого растения
+                                                    </p>
+                                                </li>
+                                                <li class="for-whom-li">
+                                                    <p>
+                                                        <strong>Известная с древности пряность по праву считается не
+                                                            только</strong>
+                                                        <br>
+                                                        ароматическим, но и лекарственным растением. Черный тмин
+                                                        используют в медицине при заболеваниях кишечника, в
+                                                        косметологии, в ароматерапии.<br> Узнаем, какие еще полезные
+                                                        свойства есть у этого растения
+                                                    </p>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+                                        <div>
+                                            <img class="main-product-1 float-lg-end" src="img/main-product-1.png"
+                                                 alt=""/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-pagination"></div>
 
@@ -451,15 +569,23 @@
             </div>
         </div>
     </section>
-    <section class="section-4 py-5" style="background: #000">
+    <section class="section-4 py-5" >
         <div class="container">
             <div class="text-center py-5">
-                <h1 class="title-h1-gold" style="background: #000">
+                <h1 class="title-h1-gold">
                     <span>Видео отзывы</span>
                 </h1>
             </div>
             <div>
-                <!--slider-or-carousel-->
+                <div class="swiper-container-video-reviews">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide swiperSlideVideoReviews" style="background-image:url('img/man_in_Video1.png')"></div>
+                        <div class="swiper-slide swiperSlideVideoReviews" style="background-image:url('img/man_in_Video.png')"></div>
+                        <div class="swiper-slide swiperSlideVideoReviews" style="background-image:url('img/woman_in_video.png')"></div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <!--<div class="swiper-pagination"></div>-->
+                </div>
             </div>
         </div>
     </section>
@@ -490,7 +616,7 @@
             </div>
         </div>
     </section>
-    <section class="section-7 py-5" style="background: #000; height: 900px;">
+    <section class="section-7 delivery py-5" style="background: #000;">
         <div class="container">
             <div class="text-center py-5">
                 <h1 class="title-h1-gold" style="background: #000">
@@ -705,6 +831,36 @@
             el: '.swiper-pagination',
             dynamicBullets: true,
         },
+    });
+    var swiper = new Swiper('.swiper-container-video-reviews', {
+        effect: 'coverflow',
+        grabCursor: true,
+        centeredSlides: true,
+        slidesPerView: 'auto',
+        coverflowEffect: {
+            rotate: 50,
+            stretch: 0,
+            depth: 100,
+            modifier: 1,
+            slideShadows: true,
+        },
+        pagination: {
+            el: '.swiper-pagination',
+        },
+        breakpoints: {
+            '@0.75': {
+                slidesPerView: 2,
+                spaceBetween: 20,
+            },
+            '@1.00': {
+                slidesPerView: 3,
+                spaceBetween: 40,
+            },
+            '@1.50': {
+                slidesPerView: 4,
+                spaceBetween: 50,
+            },
+        }
     });
 </script>
 </body>
