--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             background-position: center;
             background-size: cover;
         }
+
         .swiperSlideVideoReviews {
             width: 500px;
             height: 300px;
@@ -67,8 +68,8 @@
                                     </li>
                                 </ul>
                                 <span class="mx-4">
-                                <span>+7(707)123-4567</span> <br>
-                                <span>+7(707)123-4567</span>
+                                <span class="small">+7(707)123-4567</span> <br>
+                                <span class="small">+7(707)123-4567</span>
                             </span>
                                 <form class="d-flex">
                                     <button class="btn free-call fw-bold" type="submit"><i class="fas fa-phone"></i>
@@ -87,9 +88,9 @@
                                     <div class="row">
                                         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                                             <h1 class="title-h1 pt-5 mt-5">
-                                            <span>Начни принимать сегодня <br>
-                                                <span class="title-h1-gold">получи результат <br> за 2 недели</span>
-                                            </span>
+                                                <span>Начни принимать сегодня <br>
+                                                    <span class="title-h1-gold">получи результат <br> за 2 недели</span>
+                                                </span>
                                             </h1>
                                             <div>
                                                 <button class="btn btn-dark-gradient">УЗНАТЬ О ПРОДУКТЕ</button>
@@ -161,7 +162,7 @@
             </div>
         </div>
     </section>
-    <section class="section-2 py-5" style="background: #000;">
+    <section class="section-2 py-5">
         <div class="container">
             <div class="text-center">
                 <h1 class="title-h1">
@@ -773,7 +774,7 @@
             </div>
         </div>
     </section>
-    <section class="section-4 py-5" >
+    <section class="section-4 py-5">
         <div class="container">
             <div class="text-center py-5">
                 <h1 class="title-h1-gold">
@@ -783,17 +784,22 @@
             <div>
                 <div class="swiper-container-video-reviews">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide swiperSlideVideoReviews" style="background-image:url('img/man_in_Video1.png')"></div>
-                        <div class="swiper-slide swiperSlideVideoReviews" style="background-image:url('img/man_in_Video.png')"></div>
-                        <div class="swiper-slide swiperSlideVideoReviews" style="background-image:url('img/woman_in_video.png')"></div>
+                        <div class="swiper-slide swiperSlideVideoReviews"
+                             style="background-image:url('img/man_in_Video1.png')"></div>
+                        <div class="swiper-slide swiperSlideVideoReviews"
+                             style="background-image:url('img/man_in_Video.png')"></div>
+                        <div class="swiper-slide swiperSlideVideoReviews"
+                             style="background-image:url('img/woman_in_video.png')"></div>
                     </div>
                     <!-- Add Pagination -->
                     <!--<div class="swiper-pagination"></div>-->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-6 py-5" style="background: #000">
+    <section class="section-6 py-5">
         <div class="container">
             <div class="text-center my-5">
                 <h1 class="title-h1-gold">
@@ -820,10 +826,10 @@
             </div>
         </div>
     </section>
-    <section class="section-7 delivery py-5" style="background: #000;">
+    <section class="section-7 delivery py-5">
         <div class="container">
             <div class="text-center py-5">
-                <h1 class="title-h1-gold" style="background: #000">
+                <h1 class="title-h1-gold">
                     <span>ДОСТАВКА</span>
                 </h1>
             </div>
@@ -839,7 +845,7 @@
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-6 col-sm-12">
-                    <div class="arrow-left"></div>
+                    <!--<div class="arrow-left"></div>-->
                     <div class="gold-gradient card mx-5">
                         <div class="card-body p-5">
                             <h3 class="title-h3">
@@ -866,7 +872,7 @@
             </div>
         </div>
     </div>
-    <section class="section-8 py-5 my-5" style="background: #000; border-top-right-radius: 200px;">
+    <section class="section-8 py-5" style="border-top-right-radius: 200px;">
         <div class="container">
             <div class="row">
                 <div class="row">
