--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                                             <img class="img-fluid" src="img/for_olds.png" alt="">
                                         </div>
                                         <div>
-                                            <ul class="for-whom-ul">
-                                                <li class="for-whom-li">
+                                            <ul class="ownUl for-whom-ul">
+                                                <li class="ownLi">
                                                     <p>
                                                         <strong>Известная с древности пряность по праву считается не
                                                             только</strong>
@@ -291,7 +291,7 @@
                                                         свойства есть у этого растения
                                                     </p>
                                                 </li>
-                                                <li class="for-whom-li">
+                                                <li class="ownLi">
                                                     <p>
                                                         <strong>Известная с древности пряность по праву считается не
                                                             только</strong>
@@ -302,7 +302,7 @@
                                                         свойства есть у этого растения
                                                     </p>
                                                 </li>
-                                                <li class="for-whom-li">
+                                                <li class="ownLi">
                                                     <p>
                                                         <strong>Известная с древности пряность по праву считается не
                                                             только</strong>
@@ -878,8 +878,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                         <div>
-                            <ul class="for-whom-ul-2 text-white">
-                                <li class="for-whom-li-2">
+                            <ul class="ownUl text-white">
+                                <li class="ownLi">
                                     <p>
                                         <strong>Известная с древности пряность по праву считается не
                                             только</strong>
@@ -890,7 +890,7 @@
                                         свойства есть у этого растения
                                     </p>
                                 </li>
-                                <li class="for-whom-li-2">
+                                <li class="ownLi">
                                     <p>
                                         <strong>Известная с древности пряность по праву считается не
                                             только</strong>
@@ -901,7 +901,7 @@
                                         свойства есть у этого растения
                                     </p>
                                 </li>
-                                <li class="for-whom-li-2">
+                                <li class="ownLi">
                                     <p>
                                         <strong>Известная с древности пряность по праву считается не
                                             только</strong>
@@ -917,8 +917,8 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                         <div>
-                            <ul class="for-whom-ul-3 text-white">
-                                <li class="for-whom-li-3">
+                            <ul class="ownUl text-white">
+                                <li class="ownLi">
                                     <p>
                                         <strong>Известная с древности пряность по праву считается не
                                             только</strong>
@@ -929,7 +929,7 @@
                                         свойства есть у этого растения
                                     </p>
                                 </li>
-                                <li class="for-whom-li-3">
+                                <li class="ownLi">
                                     <p>
                                         <strong>Известная с древности пряность по праву считается не
                                             только</strong>
@@ -940,7 +940,7 @@
                                         свойства есть у этого растения
                                     </p>
                                 </li>
-                                <li class="for-whom-li-3">
+                                <li class="ownLi">
                                     <p>
                                         <strong>Известная с древности пряность по праву считается не
                                             только</strong>
