--- a/index.html
+++ b/index.html
@@ -861,10 +861,11 @@
             </div>
         </div>
     </section>
-    <div class="gold-gradient-footer" style="border-top-left-radius: 300px;">
+    <div class="gold-gradient-footer">
+        <!--<img src="img/oiu.png" class="img-fluid" alt="" style="background-attachment: fixed"/>-->
         <div class="oiuImg">
             <div class="container">
-                <div class="text-center mt-5 pt-5">
+                <div class="text-center">
                     <h1 class="title-h1" style="z-index: 1; color: #000;">
                         ЧАСТО ЗАДАВАЕМЫЕ <br> ВОПРОСЫ
                     </h1>
