--- a/index.html
+++ b/index.html
@@ -709,11 +709,25 @@
         <div class="container">
             <div class="row text-white">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                    <a class="h4" data-bs-toggle="collapse" href="#faq-collapse-1" role="button" aria-expanded="false"
+                    <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-1" role="button" aria-expanded="false"
                        aria-controls="faq-collapse-1">
                             Известная с древности пряность
                     </a>
                     <div class="collapse" id="faq-collapse-1">
+                        <div class="my-4">
+                            по праву считается не только
+                            ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
+                            заболеваниях кишечника, в
+                            косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                    <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-2" role="button" aria-expanded="false"
+                       aria-controls="faq-collapse-2">
+                        Известная с древности пряность
+                    </a>
+                    <div class="collapse" id="faq-collapse-2">
                         <div class="my-4">
                             по праву считается не только
                             ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
@@ -744,10 +758,6 @@
                         +7 787 456 78 91<br>
                         +7 800 123 45 67
                     </p>
-                </div>
-                <div class="">
-                    <i class="fab fa-telegram fa-2x"></i>
-                    <i class="fab fa-whatsapp fa-2x"></i>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 my-4">
