--- a/index.html
+++ b/index.html
@@ -706,34 +706,32 @@
         </div>
     </div>
     <section class="section-8 py-5">
-        <div class="container">
-            <div class="row text-white">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                    <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-1" role="button" aria-expanded="false"
-                       aria-controls="faq-collapse-1">
-                            Известная с древности пряность
-                    </a>
-                    <div class="collapse" id="faq-collapse-1">
-                        <div class="my-4">
-                            по праву считается не только
-                            ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
-                            заболеваниях кишечника, в
-                            косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
-                        </div>
+        <div class="container text-white">
+            <div class="text-center my-4">
+                <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-1" role="button" aria-expanded="false"
+                   aria-controls="faq-collapse-1">
+                    Известная с древности пряность
+                </a>
+                <div class="collapse" id="faq-collapse-1">
+                    <div class="my-4">
+                        по праву считается не только
+                        ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
+                        заболеваниях кишечника, в
+                        косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                    <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-2" role="button" aria-expanded="false"
-                       aria-controls="faq-collapse-2">
-                        Известная с древности пряность
-                    </a>
-                    <div class="collapse" id="faq-collapse-2">
-                        <div class="my-4">
-                            по праву считается не только
-                            ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
-                            заболеваниях кишечника, в
-                            косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
-                        </div>
+            </div>
+            <div class="text-center my-4">
+                <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-2" role="button" aria-expanded="false"
+                   aria-controls="faq-collapse-2">
+                    Известная с древности пряность
+                </a>
+                <div class="collapse" id="faq-collapse-2">
+                    <div class="my-4">
+                        по праву считается не только
+                        ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
+                        заболеваниях кишечника, в
+                        косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
                     </div>
                 </div>
             </div>
