--- a/index-2.html
+++ b/index-2.html
@@ -173,10 +173,9 @@
                     <span class="fw-bolder">ПОЛЬЗА В ОРГАНИЗМУ</span>
                 </h1>
             </div>
-            <div class="digitalHuman text-white"
-                 style="background: url('img/digital-human.png') center center no-repeat;">
+            <div class="digitalHuman text-white">
                 <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                         <div class="d-flex justify-content-center my-5">
                             <div class="textFadeRight">
                                 <b class="">
@@ -226,7 +225,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                         <div class="d-flex justify-content-center my-5">
                             <div class="textFadeLeftImg">
                                 <img src="img/lungs.png" class="img-fluid m-4" alt=""/>
@@ -280,7 +279,7 @@
             </div>
         </div>
     </section>
-    <section class="section-3 py-5" style="background: #000">
+    <section class="section-3-index-2 py-5" style="background: #000">
         <div class="py-5 my-5" style="background: #fff; border-radius: 439px;">
             <div class="container py-5">
                 <div class="text-center py-5">
@@ -289,7 +288,7 @@
                     </h1>
                 </div>
                 <div class="mainProductLogo py-5">
-                    <div class="d-flex justify-content-center my-4">
+                    <div class="d-flex justify-content-center my-4 px-4">
                         <div class="textFadeRight">
                             <b class="">
                                 Известная с древности пряность по <br> праву считается не только
@@ -314,7 +313,7 @@
                             свойства есть <br> у этого растения
                         </div>
                     </div>
-                    <div class="d-flex justify-content-center my-4">
+                    <div class="d-flex justify-content-center my-4 px-4">
                         <div class="textFadeRight">
                             <b class="">
                                 Известная с древности пряность по <br> праву считается не только
@@ -339,7 +338,7 @@
                             свойства есть <br> у этого растения
                         </div>
                     </div>
-                    <div class="d-flex justify-content-center my-4">
+                    <div class="d-flex justify-content-center my-4 px-4">
                         <div class="textFadeRight">
                             <b class="">
                                 Известная с древности пряность по <br> праву считается не только
