--- a/index.html
+++ b/index.html
@@ -707,33 +707,35 @@
     </div>
     <section class="section-8 py-5">
         <div class="container">
-            <div class="row text-white">
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+            <div class="text-white text-center my-5">
+                <div class="text-center">
                     <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-1" role="button" aria-expanded="false"
                        aria-controls="faq-collapse-1">
-                            Известная с древности пряность
+                        Известная с древности пряность
                     </a>
-                    <div class="collapse" id="faq-collapse-1">
-                        <div class="my-4">
-                            по праву считается не только
-                            ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
-                            заболеваниях кишечника, в
-                            косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
-                        </div>
+                </div>
+                <div class="collapse" id="faq-collapse-1">
+                    <div class="my-4">
+                        по праву считается не только
+                        ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
+                        заболеваниях кишечника, в
+                        косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+            </div>
+            <div class="text-white text-center my-5">
+                <div class="text-center">
                     <a class="faq-link collapsed h4" data-bs-toggle="collapse" href="#faq-collapse-2" role="button" aria-expanded="false"
                        aria-controls="faq-collapse-2">
                         Известная с древности пряность
                     </a>
-                    <div class="collapse" id="faq-collapse-2">
-                        <div class="my-4">
-                            по праву считается не только
-                            ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
-                            заболеваниях кишечника, в
-                            косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
-                        </div>
+                </div>
+                <div class="collapse" id="faq-collapse-2">
+                    <div class="my-4">
+                        по праву считается не только
+                        ароматическим, но и лекарственным растением. Черный тмин используют в медицине при
+                        заболеваниях кишечника, в
+                        косметологии, в ароматерапии. Узнаем, какие еще полезные свойства есть у этого растения
                     </div>
                 </div>
             </div>
