--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
     </section>
     <section class="section-3 py-5" style="background: #000">
-        <div class="py-5 my-5" style="background: #fff; border-radius: 439px;">
+        <div class="py-5 my-5 section-3-border bg-white">
             <div class="container py-5">
                 <div class="text-center py-5">
                     <h1 class="title-h1" style="color: #000">
@@ -276,7 +276,7 @@
                             <div class="for-whom">
                                 <div class="row">
                                     <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                        <div class="text-center">
+                                        <div class="text-center peopleMobile">
                                             <img class="img-fluid" src="img/for_children.png" alt="">
                                             <img class="img-fluid" src="img/for_adults.png" alt="">
                                             <img class="img-fluid" src="img/for_olds.png" alt="">
