--- a/index-2.html
+++ b/index-2.html
@@ -281,7 +281,7 @@
         </div>
     </section>
     <section class="section-3-index-2 py-5" style="background: #000">
-        <div class="py-5 my-5 section-3-border">
+        <div class="py-5 my-5 section-3-border bg-white">
             <div class="container py-5">
                 <div class="text-center py-5">
                     <h1 class="title-h1" style="color: #000">
